# cpp-qt-generator

./: CHANGELOG.md  README.md  package-lock.json  package.json
src/: extension.ts  handlers.ts
src/templates/qt_console_application/: CMakeLists.txt
src/templates/qt_quick_application/: CMakeLists.txt
src/templates/qt_widgets_application/: CMakeLists.txt
